# token-plan-benchmark

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
config/: benchmark.yaml  models.yaml  providers.yaml  test_cases.yaml
openspec/: config.yaml
openspec/changes/implement-benchmark-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/implement-benchmark-pipeline/specs/benchmark-pipeline/: spec.md
openspec/changes/implement-provider-adapters/: design.md  proposal.md  tasks.md
openspec/changes/implement-provider-adapters/specs/provider-adapters/: spec.md
openspec/specs/benchmark-pipeline/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/core-models/: spec.md
src/token_plan_benchmark/: __init__.py
src/token_plan_benchmark/cli/: __init__.py  main.py
src/token_plan_benchmark/core/: config.py  exceptions.py  models.py
src/token_plan_benchmark/metrics/: __init__.py  stats.py
src/token_plan_benchmark/providers/: __init__.py  adapter.py
src/token_plan_benchmark/reporter/: __init__.py  console.py
src/token_plan_benchmark/runner/: __init__.py  engine.py
src/token_plan_benchmark/storage/: __init__.py  json_store.py
src/token_plan_benchmark/visualize/: __init__.py  charts.py
tests/providers/: test_adapter.py
