[project]
name = "token-plan-benchmark"
version = "0.1.0"
description = "Benchmark LLM token generation performance across Tencent Hunyuan, Alibaba Bailian, and ByteDance Volcano Engine"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
plotly = ["plotly>=5.18.0", "kaleido>=0.2.0"]

[project.scripts]
token-benchmark = "token_plan_benchmark.cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
